--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       <div id="deck">
         <div class="back"></div>
       </div>
-      <div class="container" id="dealer images">
+      <div class="container" id="dealer">
       </div>
 
       <div class="border-line"></div>
 
       <div id="player-score" class="score">Your score: <span>0</span></div>
-      <div class="container" id="player images">
+      <div class="container" id="player">
       </div>
     </div>
 
